<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:key="salario_bruto_key"
        android:title="@string/salario_bruto"
        android:defaultValue="@integer/salario_bruto"
        android:selectAllOnFocus="true"
        android:inputType="number"/>

    <EditTextPreference
        android:key="horas_trabalhadas_key"
        android:title="@string/horas_trabalhadas"
        android:defaultValue="@integer/horas_mes"
        android:selectAllOnFocus="true"
        android:inputType="number"/>

    <EditTextPreference
        android:key="percentual_key"
        android:title="@string/percentual_horas_extras"
        android:defaultValue="@integer/percentual_hora_extra"
        android:selectAllOnFocus="true"
        android:inputType="number" />

    <EditTextPreference
        android:key="objetivo_key"
        android:title="@string/objetivo"
        android:defaultValue="@integer/objetivo"
        android:selectAllOnFocus="true"
        android:inputType="number" />

</PreferenceScreen>
