<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".ToRicoActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="72sp"
        android:gravity="center"
        android:text="@string/app_name"
        android:id="@+id/txTitle"
        android:layout_margin="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="48sp"
        android:text="R$ 0,00"
        android:gravity="center"
        android:id="@+id/tvValorAcumulado"
        android:layout_margin="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="24sp"
                android:id="@+id/txTempo"
                android:text="@string/tempo"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="36sp"
                android:id="@+id/tvTempo"
                android:text="0:00:00"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="24sp"
                android:id="@+id/txValorSegundo"
                android:text="@string/valor_segundo"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="36sp"
                android:gravity="center"
                android:id="@+id/tvValorSegundo"
                android:text="R$ 0,0000"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Stop"
            android:onClick="stop"
            android:drawableLeft="@drawable/ic_action_stop"
            android:drawableStart="@drawable/ic_action_stop"
            android:id="@+id/btStop" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Pause"
            android:onClick="pause"
            android:drawableLeft="@drawable/ic_action_pause"
            android:drawableStart="@drawable/ic_action_pause"
            android:id="@+id/btPause"
            android:contextClickable="true" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Play"
            android:onClick="play"
            android:drawableLeft="@drawable/ic_action_play"
            android:drawableStart="@drawable/ic_action_play"
            android:id="@+id/btPlay" />
    </LinearLayout>

</LinearLayout>
